--- a/app/src/main/res/menu/main_options_menu.xml
+++ b/app/src/main/res/menu/main_options_menu.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/delete_today"
-    android:title="Clear Selected Day"
+    android:title="오늘 일정 전체 삭제"
     android:icon="@mipmap/ic_launcher"/>
     <item android:id="@+id/postpone_today"
-        android:title="Postpone Selected Day"
+        android:title="오늘 일정 미루기"
         android:icon="@mipmap/ic_launcher"/>
     <item android:id="@+id/delete_all"
-        android:title="Clear All "
+        android:title="모든 일정 삭제"
         android:icon="@mipmap/ic_launcher"/>
-    <item android:id="@+id/manage_contacts"
-        android:title="Manage Contacts"
-        android:icon="@mipmap/ic_launcher"/>
+<!--    <item android:id="@+id/manage_contacts"-->
+<!--        android:title="연락처 관리"-->
+<!--        android:icon="@mipmap/ic_launcher"/>-->
 </menu>
