--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ff6f00</color>
-    <color name="colorPrimaryDark">#c43e00</color>
-    <color name="colorPrimaryLight">#ffa040</color>
-    <color name="colorAccent">#c43e00</color>
-    <color name="negative">#FF0000</color>
-    <color name="affirmative">#6D9E1F</color>
+    <color name="colorPrimary">#1de9b6</color>
+    <color name="colorPrimaryDark">#004d40</color>
+    <color name="colorPrimaryLight">#b2dfdb</color>
+    <color name="colorAccent">#00695c</color>
+    <color name="negative">#1A237E</color>
+    <color name="affirmative">#00bfa5</color>
     <color name="listItemBackgroundDisable">#949494</color>
     <color name="textLight">#FFFFFF</color>
     <color name="textDark">#000000</color>
